--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -28,6 +28,9 @@
 
         .airport-options {
             text-align: left;
+            .airport {
+                width: 70%;
+            }
         }
 
         .basemap-options {
