--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -95,3 +95,13 @@
         border-color: #555 transparent transparent transparent;
     }
 }
+
+img {
+    height: 30px;
+    width: 30px;
+    position: relative;
+    top: 90px;
+    right: 60px;
+    z-index: 10;
+    float: right;
+}
