--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,23 @@
     transform: rotate(360deg);
   }
 }
+
+
+.tab-list {
+  border-bottom: 1px solid #ccc;
+  padding-left: 0;
+  float: left;
+}
+
+.tab-list-item {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.5rem 0.75rem;
+}
+
+.tab-list-active {
+  background-color: white;
+  border: solid #ccc;
+  border-width: 1px 1px 0 1px;
+}
