--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -1,22 +1,25 @@
 @import '../css/map.scss';
 
 .landing {
-    height: 100vh;
     .airport-layer {
         display: flex;
         flex-direction: row;
     }
     
     .airport-div {
-        height: 100%;
+        height: 86vh;
         flex-basis: 30%;
-        margin-top: 20px;
         text-align: left;
         margin-right: 20px;
+        border: 1px solid black;
+        .airport-options {
+            margin-top: 10px;
+        }
         .airport-options-inner {
             height: 50%;
             border: 1px solid black;
             border-radius: 5px;
+            margin: 0px 10px;
         }
         .airport {
             background-color: cadetblue;
@@ -37,4 +40,55 @@
         flex-basis: 70%;
     }
     
+}
+
+#select-year {
+    float: left;
+    width: 250px;
+    height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    border: 2px solid green;
+    margin: 10px 0px;
+    font-weight: bold;
+}
+
+#select-branch, #select-aggregation {
+    float: left;
+    width: 200px;
+    height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    border: 2px solid green;
+    margin: 10px 10px;
+    font-weight: bold;
+}
+
+.pci-details {
+    background-color: rebeccapurple;
+    width: inherit;
+    height: 50px;
+    position: absolute;
+    bottom: 21px;
+    z-index: 5;
+    display: flex;
+    flex: 7;
+    flex-direction: row;
+}
+
+.pci-item {
+    flex: 1;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    p {
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;
+        font-size: 12px;
+        &:first-child{
+            margin-top: 5px !important;
+        }
+    }
 }
