--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -1,5 +1,5 @@
 .ol-map {
-    height: 500px;
+    height: 75vh;
     width: 60vw;
 }
 
@@ -8,6 +8,10 @@
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 4px;
     padding: 2px;
+}
+
+.ol-marker{
+    height: 42px !important;
 }
 
 
