--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,15 +1,15 @@
 .header {
-    width: 100%;
-    height: 80px;
+    //width: 100%;
+    //height: 80px;
     background-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
-    border-bottom: 1px solid black;
+    //border-bottom: 1px solid black;
     .logo-banner {
-        height: 70px;
-        width: 70px;
-        margin: 0px 20px;
+        width: 100px;
+        //margin: 20px 20px;
+        float: left;
     }
 
     .logo-info {
@@ -17,7 +17,59 @@
         color: black;
         font-weight: bold;
         text-align: center;
-        margin: 0px;
+        margin: 16px;
         padding: 0px;
+        float: left;
     }
+    
+
+    .logo-section{
+        float: left;
+        padding: 0 32px;
+    }
+
+}
+
+
+.header-container {
+    padding: 16px;
+    background-color: #FFFFFF;
+    border-bottom: 1px solid #e0e0e0!important;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
+}
+
+
+.nav-section{
+    float: right;
+}
+.nav-section ul{
+    list-style-type: none;    
+    margin: 0;
+    padding: 0;
+}
+
+.nav-section ul li{
+    float : left;
+    margin: 32px;
+}
+
+.nav-section ul li.active a{
+    border-bottom: 3px solid #E52A33;
+}
+
+.nav-section ul li a{
+    color: #3B3B3B;
+    font-family: "SharpSansDisplayNo1-Bold";
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.35px;
+    line-height: 24px;
+    text-transform: uppercase;
+    padding: 48px 0;
+}
+
+.nav-section ul li a:hover{
+    padding: 48px 0;
+    text-decoration: none;
+    border-bottom: 3px solid #E52A33;
 }
