--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,10 +1,11 @@
 .header {
     //width: 100%;
     //height: 80px;
-    background-color: white;
+    background-color: #181717;
     display: flex;
     flex-direction: row;
     align-items: center;
+    border-bottom: 1px solid burlywood;
     //border-bottom: 1px solid black;
     .logo-banner {
         width: 100px;
@@ -12,14 +13,24 @@
         float: left;
     }
 
+    .logo-banner-develop-by {
+        width: 100px;
+        float: left;
+        height: 50px;
+    }
+
     .logo-info {
         width: 190px;
-        color: black;
+        color: white;
         font-weight: bold;
         text-align: center;
         margin: 16px;
         padding: 0px;
         float: left;
+    }
+
+    .logo-info-develop-by {
+        color: white;
     }
     
 
@@ -28,13 +39,22 @@
         padding: 0 32px;
     }
 
+    .logo-section-develop-by {
+        float: right;
+        padding: 0 32px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
 }
 
 
 .header-container {
     width: 100%;
     padding: 16px;
-    background-color: #FFFFFF;
+    background-color: #181717;
     border-bottom: 1px solid #e0e0e0!important;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
 }
