--- a/src/css/dropdown.scss
+++ b/src/css/dropdown.scss
@@ -1,9 +1,127 @@
-.dropdown-root {
-    width: 230px;
-    display: inline-block;
-    margin: 0px 20px 0px 0px;
-    padding: 0px;
+.dropdown-div-inner {
+    transition-property: max-height;
+    transition-duration: 1s;
+    max-height: 0px;  
+    overflow: hidden;
+   
+    &:hover {
+        display: block;
+        max-height: 600px;
+    }
+    .dropdown-ul {
+       
+        height: 100%;
+        position: relative;
+        left: 0px;
+        padding: 0px 12px;
+        background: #fff;
+        border-top: none;
+        border: 1px solid #E3E3E3;
+        border-radius: 0 0 3px 3px;
+        right: 0px;
+        list-style: none;
+        transition: all 2s;
+        z-index: 200;
+        margin-top: 1px;
+
+        .option-list {
+            border-bottom: 1px solid #EEE;
+            padding: 10px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: gray;
+            }
+
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+
+        .option-header-list {
+            background-color: white;
+            color: gray;
+            margin-top: 10px;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            border-bottom: 1px solid #EEE;
+            text-align: left;
+            outline: none;
+            font-size: 15px;
+
+            &::after {
+                content: '\002B';
+                color: black;
+                font-weight: bold;
+                float: right;
+                margin-left: 5px;
+            }
+        }
+
+        .active-accordion {
+            &::after {
+                content: "\2212" !important;
+            }
+
+        }
+
+        .panel {
+            padding: 0 18px;
+            max-height: 0;
+            text-align: center;
+            overflow: hidden;
+            transition: max-height 0.2s ease-out;
+            color: black;
+        }
+    }
+
+    .active {
+        display: block;
+        transform: scaleY(1);
+    }
 }
+
+.dropdown-root {
+    text-align: center;
+    height: 100%;
+    background-color: #181717;
+    border-right: 0.5px solid black;
+    color: white;
+    
+
+    &:hover {
+        background-color: #70C989;
+        color: black;
+        span {
+            &::after {
+                transform: rotate(180deg);
+            }
+        }
+        + .dropdown-div-inner {
+            display: block;
+            max-height: 600px;
+           
+        }
+    }
+
+    .dropdown-arrow {
+        font-size: 15px;
+        display: block;
+        padding-top: 5px;
+        &::after {
+            content: '\25BC';
+            color: #3c4c55;
+            float: right;
+            position: relative;
+            top: 0px;
+            margin-right: 10px;
+            transition: all 300ms cubic-bezier(0.425, 0, 0, 1);
+        }
+    }
+}
+
 
 .dropdown {
     margin-top: 20px;
@@ -46,98 +164,7 @@
         color: black;
     }
 
-    .dropdown-div-inner {
-
-        &::before {
-            content: '';
-            width: 15px;
-            height: 15px;
-            background: url(../img/downArrow.svg) center no-repeat;
-            position: absolute;
-            top: 8px;
-            right: 12px;
-            font-weight: 400;
-            line-height: 1;
-            text-rendering: auto;
-
-        }
-
-        .dropdown-ul {
-            position: absolute;
-            top: 100%;
-            left: 0px;
-            padding: 0px 12px;
-            background: #fff;
-            border-top: none;
-            border: 1px solid #E3E3E3;
-            border-radius: 0 0 3px 3px;
-            right: 0px;
-            overflow: auto;
-            list-style: none;
-            display: none;
-            transform: scaleY(0);
-            transition: all 2s;
-            z-index: 200;
-            margin-top: 1px;
-
-            .option-list {
-                border-bottom: 1px solid #EEE;
-                padding: 10px;
-                cursor: pointer;
-
-                &:hover {
-                    background-color: gray;
-                }
-
-                &:last-child {
-                    border-bottom: none;
-                }
-            }
-
-            .option-header-list {
-                background-color: white;
-                color: gray;
-                margin-top: 10px;
-                cursor: pointer;
-                padding: 18px;
-                width: 100%;
-                border: none;
-                border-bottom: 1px solid #EEE;
-                text-align: left;
-                outline: none;
-                font-size: 15px;
-
-                &::after {
-                    content: '\002B';
-                    color: black;
-                    font-weight: bold;
-                    float: right;
-                    margin-left: 5px;
-                }
-            }
-
-            .active-accordion {
-                &::after {
-                    content: "\2212" !important;
-                }
-
-            }
-
-            .panel {
-                padding: 0 18px;
-                max-height: 0;
-                text-align: center;
-                overflow: hidden;
-                transition: max-height 0.2s ease-out;
-                color: black;
-            }
-        }
-
-        .active {
-            display: block;
-            transform: scaleY(1);
-        }
-    }
+    
 }
 
 .disable-dropdown {
@@ -164,6 +191,36 @@
         }
     }
 
+}
+
+#dropdown-div-inner-select-branch {
+    overflow: hidden !important;
+}
+
+#dropdown-select-branch {
+    overflow: hidden !important;
+}
+
+#dropdown-div-inner-select-aggregation {
+    overflow: hidden !important;
+}
+
+#dropdown-select-aggregation {
+    overflow: hidden !important;
+}
+
+#dropdown-div-inner-select-year {
+    overflow: hidden !important;
+}
+
+#dropdown-select-year {
+    overflow: hidden !important;
+}
+
+#dropdown-div-inner-select-airport-details {
+    .dropdown-ul {
+        overflow: auto !important;
+    } 
 }
 
 @media all and (max-width: 760px) {
