--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -1,11 +1,38 @@
 @import '../css/map.scss';
 
+.dropdown-section {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    background-color: #181717;
+    .airport-div-inner {
+        flex-basis: 25%;
+    }
+    
+    .assessment-year-div-inner {
+        flex-basis: 20%;
+    }
+    
+    .branch-div-inner {
+        flex-basis: 20%;
+    }
+    
+
+    .aggregation-div-inner {
+        flex-basis: 20%;
+    }
+
+    .toggle-div {
+        flex-basis: 15%;
+    }
+}
+
 .landing {
     .airport-layer {
         display: flex;
         flex-direction: row;
         padding: 0;
-        margin: 20px;
     }
     
     .airport-div {
@@ -39,7 +66,7 @@
     }
     .airport-map {
         height: 100%;
-        flex-basis: 70%;
+        flex-basis: 100%;
     }
     
 }
@@ -56,6 +83,44 @@
     display: flex;
     flex: 7;
     flex-direction: row;
+}
+
+.airport-princenton {
+    position: absolute;
+    width: 370px;
+    background-color: white;
+    transition-property: max-height;
+    transition-duration: 1s;
+    overflow-y: auto;
+    bottom: 71px;
+    right: 0px;
+    z-index: 3000;
+    .airport-princenton-header {
+        max-height: 30px;
+        width: 100%;
+        background-color: #181717;
+        color: white;
+        text-align: center;
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+    }
+    .airport-pci-list-value {
+        overflow-y: auto;
+        &:nth-child(odd) {
+            background-color: gray;
+        }
+    }
+    .airport-pci-list {
+        width: 100%;
+        max-height: 30px;
+        display: flex;
+        flex-direction: row;
+        div {
+            flex-basis: 33.3%;
+            border-right: 1px solid gray;
+            padding: 0px 5px;
+        }
+    }
 }
 
 .pci-item {
