--- a/src/css/dropdown.scss
+++ b/src/css/dropdown.scss
@@ -92,7 +92,7 @@
     
 
     &:hover {
-        background-color: #70C989;
+        background-color: #FFFF00;
         color: black;
         span {
             &::after {
