--- a/src/App.scss
+++ b/src/App.scss
@@ -71,6 +71,7 @@
   border-radius: 4px;
   background-color: #FFFFFF;
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
+  text-align: center;
 }
 
 .switch-container {
