--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -1,11 +1,33 @@
 @import '../css/map.scss';
 
+.down_arrow {
+    height: 60px;
+    width: 60px;
+    position: absolute;
+    top: 120px;
+    z-index: 20;
+    transition: height 2s;
+    &:hover {
+        height: 0px;
+        +.dropdown-section {
+            height: 40px;
+        }
+    }
+}
+
 .dropdown-section {
     width: 100%;
     height: 40px;
-    display: flex;
     flex-direction: row;
+    display: flex;
+    transition: height 2s;
     background-color: #181717;
+    &:hover {
+        height: 40px;
+        +.down_arrow {
+            height: 0px;
+        }
+    }
     .airport-div-inner {
         flex-basis: 25%;
     }
@@ -76,9 +98,10 @@
 .pci-details {
     background-color: rebeccapurple;
     width: inherit;
+    opacity: 0.6;
     height: 50px;
     position: absolute;
-    bottom: 21px;
+    bottom: -2px;
     z-index: 5;
     display: flex;
     flex: 7;
@@ -92,7 +115,7 @@
     transition-property: max-height;
     transition-duration: 1s;
     overflow-y: auto;
-    bottom: 71px;
+    bottom: 50px;
     right: 0px;
     z-index: 3000;
     .airport-princenton-header {
@@ -137,5 +160,15 @@
         &:first-child{
             margin-top: 5px !important;
         }
+    }
+}
+
+.airport-chart-div {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    div {
+        flex-basis: 50%;
+        background-color: 'black'
     }
 }
