--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -8,13 +8,14 @@
     border-bottom: 1px solid burlywood;
     //border-bottom: 1px solid black;
     .logo-banner {
-        width: 100px;
+        width: 80px;
+        height: 80px;
         //margin: 20px 20px;
         float: left;
     }
 
     .logo-banner-develop-by {
-        width: 100px;
+        width: 80px;
         float: left;
         height: 50px;
     }
@@ -36,12 +37,12 @@
 
     .logo-section{
         float: left;
-        padding: 0 32px;
+        padding: 0 20px;
     }
 
     .logo-section-develop-by {
         float: right;
-        padding: 0 32px;
+        padding: 11px 32px;
         display: flex;
         flex-direction: column;
         text-align: center;
@@ -53,7 +54,7 @@
 
 .header-container {
     width: 100%;
-    padding: 16px;
+    padding: 8px 16px;
     background-color: #181717;
     border-bottom: 1px solid #e0e0e0!important;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
