--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -7,6 +7,7 @@
     top: -12px;
     z-index: 20;
     transition: height 2s;
+    cursor: pointer;
     // &:hover {
     //     height: 0px;
     //     +.dropdown-section {
