--- a/src/css/basemapportal.scss
+++ b/src/css/basemapportal.scss
@@ -44,6 +44,8 @@
         background-color: white;
         display: grid;
         column-gap: 50px;
+        position: relative;
+        z-index: 111;
         row-gap: 20px;
         grid-template-columns: auto auto auto;
         padding: 30px;
