--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -57,6 +57,8 @@
 }
 
 .landing {
+    height: fit-content;
+
     .airport-layer {
         display: flex;
         flex-direction: row;
@@ -121,8 +123,9 @@
 }
 
 .airport-princenton {
+    max-height: 0px;
     position: absolute;
-    width: 370px;
+    width: 390px;
     background-color: white;
     transition-property: max-height;
     transition-duration: 1s;
@@ -131,17 +134,87 @@
     right: 0px;
     z-index: 3000;
 
+    .branch-all-wrapper {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+
+        .branch-details {
+            overflow: auto;
+            transition-property: flex-basis;
+            transition-duration: 1s;
+            flex-basis: 0%;
+        }
+
+        .distress_quantities {
+            overflow: auto;
+            transition-property: flex-basis;
+            transition-duration: 1s;
+            flex-basis: 100%;
+            font-weight: bold;
+            height: 0px;
+
+            .distress-heading {
+                display: flex;
+                flex-direction: row;
+                height: 30px;
+                border-bottom: 1px solid black;
+                background-color: gray;
+
+                div {
+                    flex-basis: 25%;
+                    height: 100%;
+                    border-right: 1px solid black;
+                }
+            }
+
+            .distress-content {
+                .airport-pci-quantity-list {
+                    width: 100%;
+                    max-height: 30px;
+                    display: flex;
+                    flex-direction: row;
+                    border-bottom: 1px solid black;
+
+                    div {
+                        flex-basis: 25%;
+                        border-right: 1px solid black;
+                        padding: 0px 5px;
+                    }
+                }
+
+                .airport-pci-quantity-value {
+                    overflow-y: auto;
+
+                    &:nth-child(even) {
+                        background-color: gray;
+                    }
+                }
+            }
+
+        }
+    }
+
+
+
     .airport-princenton-header {
         max-height: 30px;
         width: 100%;
         background-color: #181717;
         color: white;
         text-align: center;
-        border-top-right-radius: 5px;
-        border-top-left-radius: 5px;
     }
 
     .airport-pci-list-value {
+        overflow-y: auto;
+
+        &:nth-child(odd) {
+            background-color: gray;
+        }
+    }
+
+    .airport-pci-details {
         overflow-y: auto;
 
         &:nth-child(odd) {
@@ -157,6 +230,19 @@
 
         div {
             flex-basis: 33.3%;
+            border-right: 1px solid gray;
+            padding: 0px 5px;
+        }
+    }
+
+    .airport-pci-details-list {
+        width: 100%;
+        max-height: 30px;
+        display: flex;
+        flex-direction: row;
+
+        div {
+            flex-basis: 50%;
             border-right: 1px solid gray;
             padding: 0px 5px;
         }
@@ -185,21 +271,106 @@
 .airport-landing {
     display: flex;
     flex-direction: row;
+
     .airport-chart-div {
-        flex-basis: 80%;
+        width: 100%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
 
         div {
             flex-basis: 50%;
             background-color: 'black'
         }
     }
+    .airport-details-div {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        .pci-details-container {
+            background-color: black;
+            height: 450px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .pci-details-container-inner {
+                flex-basis: 100%;
+                background-color: white;
+                border-radius: 5px;
+                margin: 0px 20px;
+                .airport-princenton-header {
+                    width: 100%;
+                    background-color: yellow;
+                    color: black;
+                    font-size: 17px;
+                    text-align: center;
+                    height: 40px;
+                    font-weight: bold;
+                    padding-top: 5px;
+                }
+                .branch-item-wrapper {
+                    height: 35px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    border-bottom: 1px solid black;
+                    text-align: center;
+                    &:nth-child(odd){
+                        background-color: gray;
+                    }
+                    div {
+                        flex-basis: 50%;
+                        &:first-child {
+                            border-right: 1px solid black;
+                            font-weight: bold;
+                        }
+                    }
+                }
+                .branch-qty-header {
+                    height: 35px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    border-bottom: 1px solid black;
+                    text-align: center;
+                    font-weight: bolder;
+                    div {
+                        flex-basis: 25%;
+                        border-right: 1px solid black;
+                    }
+                }
+
+                .branch-qty-details {
+                    height: 35px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    border-bottom: 1px solid black;
+                    text-align: center;
+                    &:nth-child(odd){
+                        background-color: gray;
+                    }
+                    div {
+                        flex-basis: 25%;
+                        border-right: 1px solid black;
+                    }
+                }
+            }
+        }
+    }
 
     .airport-data-div {
         flex-basis: 20%;
-        background-color: white;
+
     }
+
+    
+
+}
+
+.main-div {
+    display: flex;
+    flex-direction: column;
 }
 
 .data-selected-year {
@@ -228,17 +399,28 @@
     border-top: 1px solid #DFE3E7;
     border-left: 1px solid #DFE3E7;
     border-right: 1px solid #DFE3E7;
+
     &:last-child {
         border-bottom: 1px solid #DFE3E7;
     }
+
     &:nth-child(odd) {
         background-color: #DFE3E7;
     }
-    div  {
+
+    div {
         &:first-child {
             border-right: 1px solid #DFE3E7;
         }
+
         flex-basis: 50%;
         height: 100%;
     }
+}
+
+.branch-image-div-holder {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 240px;
 }
