--- a/src/css/togglebutton.scss
+++ b/src/css/togglebutton.scss
@@ -7,7 +7,7 @@
     border: 3px solid #FFFF00;
     display: inline-block;
     text-align: center;
-
+    margin-top: 3px;
 
 }
 
@@ -17,10 +17,9 @@ input[type="radio"].toggle {
     &+label {
         cursor: pointer;
         background-color: #A5A5A5;
-        min-width: 50%;
+        min-width: 45%;
         position: relative;
-        height: 100%;
-        padding-top: 2px;
+        height: 83%;
         font-weight: bold;
         // &:hover {
         //     background: none;
