--- a/src/css/dropdown.scss
+++ b/src/css/dropdown.scss
@@ -1,28 +1,32 @@
 .dropdown-div-inner {
     transition-property: max-height;
     transition-duration: 1s;
-    max-height: 0px;  
-    overflow: hidden;
-   
+    max-height: 0px;
+
+
     &:hover {
         display: block;
         max-height: 600px;
     }
+
     .dropdown-ul {
-       
-        height: 100%;
+
+        max-height: 0px;
         position: relative;
         left: 0px;
         padding: 0px 12px;
         background: #fff;
         border-top: none;
-        border: 1px solid #E3E3E3;
         border-radius: 0 0 3px 3px;
         right: 0px;
         list-style: none;
         transition: all 2s;
         z-index: 200;
-        margin-top: 1px;
+    
+        &:hover {
+            max-height: 600px;
+        }
+
 
         .option-list {
             border-bottom: 1px solid #EEE;
@@ -97,31 +101,38 @@
 
 .dropdown-root {
     text-align: center;
-    height: 100%;
+    height: 40px;
     background-color: #181717;
     border-right: 0.5px solid black;
     color: white;
-    
+
 
     &:hover {
         background-color: #FFFF00;
         color: black;
+
         span {
             &::after {
                 transform: rotate(180deg);
             }
         }
-        + .dropdown-div-inner {
+
+        +.dropdown-div-inner {
             display: block;
             max-height: 600px;
-           
+            .dropdown-ul {
+                max-height: 600px;
+            }
         }
+
+        
     }
 
     .dropdown-arrow {
         font-size: 15px;
         display: block;
         padding-top: 5px;
+
         &::after {
             content: '\25BC';
             color: #3c4c55;
@@ -176,7 +187,7 @@
         color: black;
     }
 
-    
+
 }
 
 .disable-dropdown {
@@ -206,12 +217,12 @@
 }
 
 #dropdown-div-inner-select-branch {
-    overflow: hidden !important;
+    .dropdown-ul {
+        overflow: auto !important;
+    }
 }
 
-#dropdown-select-branch {
-    overflow: hidden !important;
-}
+
 
 #dropdown-div-inner-select-aggregation {
     overflow: hidden !important;
@@ -232,7 +243,7 @@
 #dropdown-div-inner-select-airport-details {
     .dropdown-ul {
         overflow: auto !important;
-    } 
+    }
 }
 
 @media all and (max-width: 760px) {
