--- a/src/css/dropdown.scss
+++ b/src/css/dropdown.scss
@@ -99,6 +99,18 @@
     }
 }
 
+.dropdown-disabled {
+    text-align: center;
+    height: 40px;
+    background-color: #181717;
+    border-right: 0.5px solid black;
+    color: gainsboro;
+    position: absolute;
+    top: 0px;
+    padding-top: 5px;
+    width: 100%;
+}
+
 .dropdown-root {
     text-align: center;
     height: 40px;
