--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -123,17 +123,17 @@
 }
 
 .airport-princenton {
-    max-height: 0px;
+    height: 0px;
     position: absolute;
     width: 390px;
+    max-height: 60%;
     background-color: white;
-    transition-property: max-height;
+    transition-property: height;
     transition-duration: 1s;
-    overflow-y: auto;
     bottom: 50px;
     right: 0px;
     z-index: 3000;
-
+    border-radius: 5px;
     .branch-all-wrapper {
         height: 100%;
         width: 100%;
@@ -201,8 +201,9 @@
     .airport-princenton-header {
         max-height: 30px;
         width: 100%;
-        background-color: #181717;
-        color: white;
+        font-weight: bold;
+        background-color: yellow;
+        color: black;
         text-align: center;
     }
 
@@ -421,5 +422,4 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 240px;
 }
