--- a/src/App.scss
+++ b/src/App.scss
@@ -67,9 +67,7 @@
 
 .body-content {
   box-sizing: border-box;
-  border: 1px solid #CFCECC;
-  border-radius: 4px;
-  background-color: #FFFFFF;
+  background-color: black;
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
   text-align: center;
 }
