--- a/src/css/card.scss
+++ b/src/css/card.scss
@@ -2,17 +2,17 @@
 
 .card-container {
     box-shadow: 4px 4px 4px 4px rgba(253, 251, 251, 0.2);
-
+    position: relative;
     border-radius: 5px;
     margin-top   : 10px;
     padding      : 10px 20px;
     max-width    : 900px !important;
-    margin       : auto;
     margin-top   : 27px;
+    flex-basis: 50%;
+    height: 300px;
+    transition: all 2s;
+    background-color: #333434;
     margin-left: 20px;
-    &:last-child {
-        margin-bottom: 80px;
-    }
     .home-icon-container {
         height         : 100px;
         width          : 100%;
@@ -27,4 +27,25 @@
             background-color: chartreuse;
         }
     }
+}
+
+
+
+.card-holder-expand {
+    height: 500px !important;
+    transition: all 2s;
+}   
+
+.card-holder-collapse {
+    height: 300px !important;
+    transition: all 2s;
+}
+
+.expand-collaps-icon {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    top: 10px;
+    right: 0px;
+    cursor: pointer;
 }
