--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -55,7 +55,7 @@
 .header-container {
     width: 100%;
     padding: 8px 16px;
-    background-color: #181717;
+    background-color: #A4A5A5;
     border-bottom: 1px solid #e0e0e0!important;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
 }
