--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -144,6 +144,7 @@
     right: 0px;
     z-index: 3000;
     border-radius: 10px;
+    overflow: auto;
 
     .branch-all-wrapper {
         height: 100%;
