--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -38,6 +38,8 @@
     .logo-section{
         float: left;
         padding: 0 20px;
+        cursor: pointer;
+        margin-top: 10px;
     }
 
     .logo-section-develop-by {
@@ -47,15 +49,18 @@
         flex-direction: column;
         text-align: center;
         align-items: center;
+        margin-top: 20px;
     }
 
 }
 
 
 .header-container {
+    height: 100px;
     width: 100%;
-    padding: 8px 16px;
-    background-color: #A4A5A5;
+    background: url(../img/banner_amjms.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     border-bottom: 1px solid #e0e0e0!important;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
 }
