--- a/src/css/map.scss
+++ b/src/css/map.scss
@@ -2,7 +2,7 @@
     height: 82vh;
     position: absolute;
     top: -58px;
-    width: 99.7vw;
+    //width: 99.7vw;
 }
 
 .ol-control {
@@ -97,7 +97,7 @@
     height: 40px;
     width: 40px;
     position: absolute;
-    top: 47px;
+    top: 31px;
     right: 0px;
     cursor: pointer;
     // &:hover {
@@ -112,7 +112,7 @@
     height: 40px;
     width: 40px;
     position: absolute;
-    top: 47px;
+    top: 31px;
     left: 0px;
     cursor: pointer;
     // &:hover {
