--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,18 @@
   }
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
