--- a/src/css/dropdown.scss
+++ b/src/css/dropdown.scss
@@ -3,10 +3,17 @@
     transition-duration: 1s;
     max-height: 700px;
 
+    input {
+        height: 0px;
+    }
 
     &:hover {
         display: block;
         max-height: 700px;
+
+        input {
+            height: 30px;
+        }
     }
 
     .dropdown-ul {
@@ -22,7 +29,7 @@
         list-style: none;
         transition: all 2s;
         z-index: 200;
-    
+
         &:hover {
             max-height: 700px;
         }
@@ -132,12 +139,17 @@
         +.dropdown-div-inner {
             display: block;
             max-height: 600px;
+
             .dropdown-ul {
                 max-height: 600px;
             }
+
+            input {
+                height: 30px;
+            }
         }
 
-        
+
     }
 
     .dropdown-arrow {
@@ -252,9 +264,37 @@
     overflow: hidden !important;
 }
 
+#dropdown-div-inner-select-pci {
+    overflow: hidden !important;
+}
+
+#dropdown-select-pci {
+    overflow: hidden !important;
+}
+
 #dropdown-div-inner-select-airport-details {
     .dropdown-ul {
         overflow: auto !important;
+    }
+}
+
+.option-edit-div {
+    display: flex;
+    height: 30px;
+    flex-direction: row;
+
+    div {
+        flex-basis: 50%;
+
+        p {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        //    input {
+        //     display: block;
+        //     height: 30px;
+        //    }
     }
 }
 
