--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -21,13 +21,14 @@
     }
 
     .logo-info {
-        width: 190px;
+        width: fit-content;
         color: white;
         font-weight: bold;
         text-align: center;
         margin: 16px;
         padding: 0px;
         float: left;
+        margin-top: 25px;
     }
 
     .logo-info-develop-by {
@@ -40,6 +41,8 @@
         padding: 0 20px;
         cursor: pointer;
         margin-top: 10px;
+        position: absolute;
+        top: 3px;
     }
 
     .logo-section-develop-by {
@@ -50,6 +53,9 @@
         text-align: center;
         align-items: center;
         margin-top: 20px;
+        position: absolute;
+        top: -2px;
+        right: 3px;
     }
 
 }
@@ -60,6 +66,7 @@
     width: 100%;
     background: url(../img/banner_amjms.png);
     background-repeat: no-repeat;
+    opacity: 0.5;
     background-size: 100% 100%;
     border-bottom: 1px solid #e0e0e0!important;
     box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
