--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -317,6 +317,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    cursor: pointer;
 
     p {
         margin: 0px;
