--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
 @import "../node_modules/ol/ol.css";
+
+* {
+  font-size: 15px;
+}
 .App {
   padding: 0 !important;
 }
@@ -33,7 +37,6 @@ input[type=number] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
