--- a/src/css/landing.scss
+++ b/src/css/landing.scss
@@ -130,7 +130,7 @@
     flex: 7;
     flex-direction: row;
     width: inherit;
-    bottom: -2px;
+    bottom: 0vh;
 }
 
 
@@ -322,6 +322,7 @@
         margin: 0px;
         padding: 0px;
         font-weight: bold;
+        font-size: 10px;
         &:first-child {
             margin-top: 5px !important;
         }
